--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "core-js": "^2.4.1",
     "firebase": "^4.3.0",
     "ng-scrollreveal": "^2.0.3",
+    "ng2-scrollimate": "^0.1.3",
     "ng2-scrollreveal": "^1.0.1",
     "rxjs": "^5.4.2",
     "scrollreveal": "^3.3.6",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
