--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@types/lodash": "^4.14.76",
     "angular2-jsonapi": "^3.6.0",
     "angularfire2": "^4.0.0-rc.2",
     "core-js": "^2.4.1",
     "firebase": "^4.3.0",
+    "ng-http-loader": "^0.3.3",
     "ng-scrollreveal": "^2.0.3",
     "ng2-scrollimate": "^0.1.3",
     "ng2-scrollreveal": "^1.0.1",
