Add /dist for prod

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@types/lodash": "^4.14.76",
+    "angular2-image-gallery": "^1.0.1",
     "angular2-jsonapi": "^3.6.0",
+    "angular2-masonry": "^0.4.0",
     "angularfire2": "^4.0.0-rc.2",
     "core-js": "^2.4.1",
     "firebase": "^4.3.0",
